# backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: github-actions-demo.yml
app/: main.py
app/api/: auth.py  badge.py  bakery.py  common.py  notice.py  preferences.py  review.py  search.py  test.py  tour.py  users.py
app/core/: auth.py  base.py  config.py  const.py  database.py  error_code.py  exception.py
app/model/: area.py  badge.py  bakery.py  base_model.py  datetime_mixin.py  notice.py  report.py  review.py  tags.py  users.py
app/repositories/: auth_repo.py  badge_repo.py  bakery_repo.py  common_repo.py  notice_repo.py  preference_repo.py  review_repo.py  search_repo.py  user_repo.py
app/schema/: auth.py  badge.py  bakery.py  base_response.py  common.py  notice.py  preferences.py  review.py  search.py  tour.py  users.py
app/services/: auth.py  auth_service.py  badge_service.py  bakery_service.py  common_service.py  notice_service.py  preference_service.py  preferences.py  review_service.py  search_service.py  tour.py  tour_service.py  user_service.py  users.py
app/tests/: confest.py  conftest.py
app/tests/fixtures/: auth.py
app/tests/unit/service/: test_auth_service.py
app/tests/unit/utils/: test_converter.py  test_parser.py
app/utils/: converer.py  converter.py  conveter.py  date.py  kakao.py  pagination.py  parser.py  upload.py  validator.py
prometheus_data/: prometheus.yml
